Basic data flow working with parallel fifo queues
